--- a/petclinic_hibernate/src/main/resources/hibernate.properties
+++ b/petclinic_hibernate/src/main/resources/hibernate.properties
@@ -1,6 +1,7 @@
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
+#hibernate.hbm2ddl.auto=update
 hibernate.hbm2ddl.auto=create
 #hibernate.hbm2ddl.auto=none
 #hibernate.allow_update_outside_transaction=true
