--- a/petclinic_hibernate/src/main/resources/hibernate.properties
+++ b/petclinic_hibernate/src/main/resources/hibernate.properties
@@ -9,3 +9,5 @@ hibernate.check_nullability=true
 hibernate.generate_statistics=true
 hibernate.enable_lazy_load_no_trans=true
 hibernate.current_session_context_class=thread
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
+hibernate.cache.use_query_cache=true
